--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Moment with Allah</h1>
-        <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">Count Azkar</button>
-        <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Total Azkar: </p>
+        <div class="container row">
+            <div class="col-md-4"></div>
+            
+            <div class="col-md-4">
+            <div class="mt-5">
+                <h1>Moment with Allah</h1>
+            </div>
+            <div class="mt-5 text-align-center">
+                <h2 id="count-el" class="text-center text-white">0</h2>
+            </div>
+            <div class="mt-5 text-center">
+                <button id="increment-btn" class="btn btn-danger text-center" onclick="increment()">Count Azkar</button>   
+            </div>
+            <div class="mt-5 text-center">
+                <button class="btn btn-success" id="save-btn text-center" onclick="save()">SAVE</button>
+            </div>
+            <div class="mt-5 text-center">
+                <p id="save-el" class="justify-content-center text-white">Total Azkar: </p>
+            </div>
+            </div>
+            <div class="col-md-4"></div>
+      </div>
+
         <script src="index.js"></script>
     </body>
 </html>
